# AutoAi

./: .gitignore  README.md  pyproject.toml
autoai/: __init__.py  agents.py  claude_settings.py  cli.py  config.py  constants.py  db.py  dispatcher.py  features.py  git_utils.py  harness.py  help_requests.py  models.py  planner.py  project.py  prompts.py  roles.py  runner.py  server.py  state.py  tasks.py  time_utils.py
backend/: pyproject.toml
backend/app/: auth.py  config.py  database.py  dispatcher.py  main.py  runtime_utils.py  scheduler.py  websocket.py  ws.py
backend/app/api/: __init__.py  activity.py  agent_tasks.py  agents.py  agents_config.py  auth.py  notifications.py  projects.py  providers.py  runs.py  runtime.py  search.py  settings.py  tasks.py  websocket.py  ws.py
backend/app/models/: activity.py  agent.py  notification.py  project.py  provider.py  run.py  settings.py  user.py
backend/app/schemas/: activity.py  agent.py  agent_task.py  auth.py  notification.py  project.py  provider.py  run.py  runtime.py  settings.py  task.py
backend/app/services/: auto_assign.py  notification.py
backend/tests/: conftest.py  test_activity.py  test_agent_config.py  test_agent_tasks.py  test_agents.py  test_auth.py  test_auth_comprehensive.py  test_auth_security.py  test_auto_assign.py  test_dispatcher.py  test_e2e_agent_flow.py  test_health.py  test_integration.py  test_main.py  test_notifications.py  test_projects.py  test_providers.py  test_runs.py  test_search.py  test_settings.py  test_tasks.py  test_tasks_advanced.py  test_websocket.py
docs/: AGENT_WORKFLOW.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  PROGRESS.md  PROJECT_STATE.md  ROADMAP.md  TEST_PLAN.md
frontend/: .gitignore  index.html  main.js  package-lock.json  package.json  preload.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
scripts/: .daemon_status.json  .dispatch_cache.json  README.md  daemon.py  dispatch.py  run-dispatch-once.vbs  (+4 more)
(+119 files in other folders)
